Correction de l'overflow

--- a/webfiles/css/sass/style.scss
+++ b/webfiles/css/sass/style.scss
@@ -257,9 +257,9 @@ footer {
 
     header {
         nav {
-            padding-left: 2rem;
 
-            img {
+            img {                
+                padding-left: 3rem;
                 width: 35px;
                 height: 24px;
             }
@@ -270,7 +270,7 @@ footer {
 
             .miniMenu {
                 font-size: 2rem;
-                padding-right: 1rem;
+                padding-right: 2rem;
                 color: white;
                 display: inline;
             }
